# Mota.DeskAgentBot

./: .gitignore  README.md  README.zh-CN.md  partitions.csv  platformio.ini  sdkconfig.defaults
MobileApplication/: .gitignore  PROJECT_STRUCTURE.md  README.md  analysis_options.yaml  pubspec.yaml
MobileApplication/android/app/: build.gradle.kts
MobileApplication/android/app/src/main/: AndroidManifest.xml
MobileApplication/ios/Runner/: Info.plist
MobileApplication/ios/Runner.xcodeproj/: project.pbxproj
MobileApplication/lib/: app.dart  main.dart
MobileApplication/lib/app/: app.dart
MobileApplication/lib/app/core/agreement/: agreement_acceptance_store.dart
MobileApplication/lib/app/core/asr/: local_asr_models.dart  sherpa_onnx_asr_service.dart
MobileApplication/lib/app/core/llm/: mota_llm_chat_client.dart  mota_llm_settings_store.dart
MobileApplication/lib/app/router/: app_router.dart
MobileApplication/lib/router/: app_router.dart
MobileApplication/lib/shared/widgets/: app_menu_overlay.dart  floating_bottom_bar.dart  page_title.dart  soft_cards.dart
MobileApplication/test/: agreement_acceptance_store_test.dart  mota_llm_chat_client_test.dart  mota_project_drawer_test.dart  pc_bridge_message_test.dart  project_bridge_models_test.dart  widget_test.dart
MobileApplication/tools/: download_asr_model.sh
docs/: README-ENG.md
include/ble/: advertising.h  ble.h  gap.h  gatt.h  stream.h
include/protocol/: protocol.h
src/: CMakeLists.txt  main.c
src/ble/: advertising.c  ble.c  gap.c  gatt.c  stream.c
src/protocol/: protocol.c
(+50 files in other folders)
